; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_votraxsnd.c_VOTRAXSND_Reinit.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_votraxsnd.c_VOTRAXSND_Reinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dsprate = common dso_local global i64 0, align 8
@num_pokeys = common dso_local global i32 0, align 4
@bit16 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VOTRAXSND_Reinit() #0 {
  %1 = load i64, i64* @dsprate, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = load i64, i64* @dsprate, align 8
  %5 = load i32, i32* @num_pokeys, align 4
  %6 = load i32, i32* @bit16, align 4
  %7 = call i32 @VOTRAXSND_Init(i64 %4, i32 %5, i32 %6)
  br label %8

8:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @VOTRAXSND_Init(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
